edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message NamespaceMetadata {
  string id = 1; // @gotags: search:"Namespace ID" sql:"pk,type(uuid)"
  string name = 2; // @gotags: search:"Namespace,store"
  string cluster_id = 3; // @gotags: search:"Cluster ID,hidden,store" sql:"fk(Cluster:id),no-fk-constraint,type(uuid)"
  string cluster_name = 4; // @gotags: search:"Cluster"
  map<string, string> labels = 5 [lazy = true]; // @gotags: search:"Namespace Label"
  google.protobuf.Timestamp creation_time = 6 [lazy = true];
  int64 priority = 7;
  map<string, string> annotations = 8 [lazy = true]; // @gotags: search:"Namespace Annotation"
}
